--- a/makefile.txt
+++ b/makefile.txt
@@ -1,9 +1,25 @@
+CC := gcc
+CFLAGS := $(CC) -c -ansi -Wall -pedantic
 
-main.o: main.c file.h error.h
-	gcc -c -ansi -Wall -pedantic main.c -o  main
+objects = main.o file.o list.o error.o asm.o
 
-file.o: file.c file.h error.h
-	gcc -c -ansi -Wall -pedantic file.c -o file.o
+assembler: $(objects)
+	$(CC) -o assembler $(objects)
+
+main.o: main.c
+	$(CFLAGS) main.c
+
+file.o: filer.c file.h
+	$(CFLAGS) file.c
+
+list.o: list.c list.h
+	$(CFLAGS) list.c
 
 error.o: error.c error.h
-	gcc -c -ansi -Wall -pedantic error.c -o error.o
+	$(CFLAGS) error.c
+
+asm.o: asm.c asm.h
+	$(CFLAGS) asm.c
+
+clean:
+	rm -f objects
