--- a/makefile.txt
+++ b/makefile.txt
@@ -1,25 +1,27 @@
-CC := gcc
-CFLAGS := $(CC) -c -ansi -Wall -pedantic
 
-objects = main.o file.o list.o error.o asm.o
-
-assembler: $(objects)
-	$(CC) -o assembler $(objects)
-
-main.o: main.c
-	$(CFLAGS) main.c
-
-file.o: filer.c file.h
-	$(CFLAGS) file.c
+assembler: main.o file.o list.o error.o asm.o translate.o utils.o
+	gcc -o assembler main.o file.o list.o error.o asm.o translate.o utils.o
 
 list.o: list.c list.h
-	$(CFLAGS) list.c
+	gcc -c -ansi -Wall -pedantic list.c -lm
+
+main.o: main.c
+	gcc -c -ansi -Wall -pedantic main.c -lm
+
+file.o: file.c file.h
+	gcc -c -ansi -Wall -pedantic file.c -lm
+
+commands.o: commands.c commands.h
+	gcc -c -ansi -Wall -pedantic commands.c -lm
 
 error.o: error.c error.h
-	$(CFLAGS) error.c
+	gcc -c -ansi -Wall -pedantic error.c -lm
 
 asm.o: asm.c asm.h
-	$(CFLAGS) asm.c
+	gcc -c -ansi -Wall -pedantic asm.c -lm
 
-clean:
-	rm -f objects
+translate.o: translate.c translate.h
+	gcc -c -ansi -Wall -pedantic translate.c -lm
+
+utils.o: utils.c utils.h
+	gcc -c -ansi -Wall -pedantic utils.c -lm
